applications/openeuler-doc-search/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-doc-search
  name: openeuler-doc-search
