applications/openeuler-doc-search/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doc-search
  namespace: openeuler-doc-search
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: doc-search
  template:
    metadata:
      labels:
        app: doc-search
    spec:
      containers:
      - name: doc-search
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/doc-search:b5aca110424dbfb67c653ed94969e42695bd7501
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
