applications/openeuler-doc-search/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-search-service
  namespace: openeuler-doc-search
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: doc-search
  type: ClusterIP
